--- a/question_1.Rmd
+++ b/question_1.Rmd
@@ -25,6 +25,8 @@ The rest of the subquestions were solved using the same code as below.
 library(stringr)
 
 library(purrr)
+
+library(readr)
 ```
 
 ## Getting inputs
@@ -198,9 +200,279 @@ str_length(final_string)
 
 ## Question 1a
 
-Solving question 1a and writing the output to the code file below.
+Solving question 1a and writing the output to a file.
+
+```{r}
+r <- 9  # number of rows
+
+c <- 9 # number of columns
+
+all.distances <- c(65, 72, 90, 110)
+
+solution.strings <- map_chr(.x = all.distances, .f = ~{
+  
+  ### setting up
+  
+orig.distance <- .x # original sum to reach = original distance to traverse
+
+n.d.step <- r - 1  # number of downward steps
+
+orig.n.r.step <- c - 1  # original number of rightward steps required; this variable holds the unchanged initial number of steps required
+
+
+n.r.step <- orig.n.r.step # current number of rightward steps required;  this quantity will later change due to progressive reduction through iteration
+
+d.step.sum <- r*(r+1)/2  # the contribution of the downward steps to the sum
+
+distance.togo <- orig.distance - d.step.sum # distance remaining to be covered solely via rightward steps
+
+## sanity check; checks if the distance can be traversed using the available number of downward and rightward steps
+
+## if the floor division of distance.togo by the number of rows is greater than the number of steps required, then the summed number cannnot be reached within the total number of operations available, both rightward and downward
+ 
+if((distance.togo %/% r) > n.r.step){
+  print(paste("Summed number,",  orig.distance, "cannot be reached within the available total number of operations."))
+}
+
+idx <- vector(mode = "numeric", length = r) # records how many number of rightward operations/steps are to be performed per row; the index of each element corresponds to row number, the elements itself corresponds to the number of rightward operations to be performed in that row number
+
+r.step.options <- 1:r # each element is a specific distance that can be traversed per rightward step; different combinations of these distances will be required to traverse the entirety of distance.togo
+
+r.step.options <- sort(r.step.options, decreasing = TRUE)
+
+### getting rightward steps
+
+for(k in seq_along(r.step.options)){
+  
+  r.step.distance <- r.step.options[k]
+  steps.taken <- distance.togo %/% r.step.distance
+  distance.covered <- r.step.distance*steps.taken
+  
+  while(steps.taken > 0) {
+    distance.covered <- r.step.distance*steps.taken
+    remaining.distance <- distance.togo - distance.covered
+    remaining.n.r.steps <-n.r.step - steps.taken
+    
+    if(remaining.distance >= remaining.n.r.steps) {
+      break
+    } else {
+      steps.taken <- steps.taken - 1
+    }
+  }
+  
+  idx[r.step.distance] <- steps.taken
+  
+  if(remaining.distance > remaining.n.r.steps){
+    distance.togo <- remaining.distance
+    n.r.step <- remaining.n.r.steps
+
+  }else if(remaining.distance == remaining.n.r.steps){
+    distance.togo <- remaining.distance
+    n.r.step <- remaining.n.r.steps
+    r.step.distance <- 1
+    steps.taken <- distance.togo %/% r.step.distance
+    distance.covered <- r.step.distance*steps.taken
+    remaining.distance <- distance.togo - distance.covered
+    remaining.n.r.steps <-n.r.step - steps.taken
+    distance.togo <- remaining.distance
+    n.r.step <- remaining.n.r.steps
+    idx[r.step.distance] <- steps.taken
+  }
+  
+  if(n.r.step == 0 & distance.togo == 0 & sum(idx) == (c-1)){
+    print("Done")
+    break
+  }
+}
+
+### building strings
+all.segments <- purrr::map(.x = seq_along(idx), .f= ~{ # iterating over all the indices of idx
+  if(.x < length(idx)){   # if any index except the last one
+    string.segment <- c(rep("R", idx[.x]), "D") # add as many rightward operations as the number at that index, and one downward operation
+    return(string.segment)
+  } else { # for the last index
+    string.segment <- c(rep("R", idx[.x])) # just add the rightward operations; no downward operations, since it is the last row
+    return(string.segment)
+  }
+})
+
+all.segments <- purrr::map(.x = all.segments, .f = ~paste0(.x, collapse = ""))  # collapse vector into single string for each element in all.segments
+
+final_string <- do.call(what = str_c, args = all.segments) # concatentate all the string segments together
+
+return(final_string)
+  
+})
+
+```
+
+```{r}
+solution.strings
+```
+
+
+```{r}
+for(i in seq_along(all.distances)){
+  line <- paste(all.distances[i], solution.strings[i], sep = " ")
+  write_lines(x = line, path = "./Question 1/output_question_1.txt", sep = "\n", append = TRUE)
+}
+```
+
+
+## Question 1b
+
+Solving question 1b and writing the output to a file.
+
+This question has been solved a little differently, owing to the fact that using the current code, the first of the summed numbers `87,127,231,192`, cannot be reached within the required of operations.
+
+The first number
+
+```{r}
+r <- 90000  # number of rows
+
+c <- 100000 # number of columns
+
+### setting up
+  
+orig.distance <- 87127231192 # original sum to reach = original distance to traverse
+
+n.d.step <- r - 1  # number of downward steps
+
+orig.n.r.step <- c - 1  # original number of rightward steps required; this variable holds the unchanged initial number of steps required
+
+
+n.r.step <- orig.n.r.step # current number of rightward steps required;  this quantity will later change due to progressive reduction through iteration
+
+d.step.sum <- r*(r+1)/2  # the contribution of the downward steps to the sum
+
+distance.togo <- orig.distance - d.step.sum # distance remaining to be covered solely via rightward steps
+
+## sanity check; checks if the distance can be traversed using the available number of downward and rightward steps
+
+## if the floor division of distance.togo by the number of rows is greater than the number of steps required, then the summed number cannnot be reached within the total number of operations available, both rightward and downward
+ 
+if((distance.togo %/% r) > n.r.step){
+  print(paste("Summed number",  orig.distance, "cannot be reached within the available total number of operations."))
+}
+```
+
+Getting the string for the second number
 
 ```{r}
 
+orig.distance <- 5994891682 # original sum to reach = original distance to traverse
+
+n.d.step <- r - 1  # number of downward steps
+
+orig.n.r.step <- c - 1  # original number of rightward steps required; this variable holds the unchanged initial number of steps required
+
+
+n.r.step <- orig.n.r.step # current number of rightward steps required;  this quantity will later change due to progressive reduction through iteration
+
+d.step.sum <- r*(r+1)/2  # the contribution of the downward steps to the sum
+
+distance.togo <- orig.distance - d.step.sum # distance remaining to be covered solely via rightward steps
+
+## sanity check; checks if the distance can be traversed using the available number of downward and rightward steps
+
+## if the floor division of distance.togo by the number of rows is greater than the number of steps required, then the summed number cannnot be reached within the total number of operations available, both rightward and downward
+ 
+if((distance.togo %/% r) > n.r.step){
+  print(paste("Summed number,",  orig.distance, "cannot be reached within the available total number of operations."))
+}
+
+idx <- vector(mode = "numeric", length = r) # records how many number of rightward operations/steps are to be performed per row; the index of each element corresponds to row number, the elements itself corresponds to the number of rightward operations to be performed in that row number
+
+r.step.options <- 1:r # each element is a specific distance that can be traversed per rightward step; different combinations of these distances will be required to traverse the entirety of distance.togo
+
+r.step.options <- sort(r.step.options, decreasing = TRUE)
+
+### getting rightward steps
+
+for(k in seq_along(r.step.options)){
+  
+  r.step.distance <- r.step.options[k]
+  steps.taken <- distance.togo %/% r.step.distance
+  distance.covered <- r.step.distance*steps.taken
+  
+  while(steps.taken > 0) {
+    distance.covered <- r.step.distance*steps.taken
+    remaining.distance <- distance.togo - distance.covered
+    remaining.n.r.steps <-n.r.step - steps.taken
+    
+    if(remaining.distance >= remaining.n.r.steps) {
+      break
+    } else {
+      steps.taken <- steps.taken - 1
+    }
+  }
+  
+  idx[r.step.distance] <- steps.taken
+  
+  if(remaining.distance > remaining.n.r.steps){
+    distance.togo <- remaining.distance
+    n.r.step <- remaining.n.r.steps
+
+  }else if(remaining.distance == remaining.n.r.steps){
+    distance.togo <- remaining.distance
+    n.r.step <- remaining.n.r.steps
+    r.step.distance <- 1
+    steps.taken <- distance.togo %/% r.step.distance
+    distance.covered <- r.step.distance*steps.taken
+    remaining.distance <- distance.togo - distance.covered
+    remaining.n.r.steps <-n.r.step - steps.taken
+    distance.togo <- remaining.distance
+    n.r.step <- remaining.n.r.steps
+    idx[r.step.distance] <- steps.taken
+  }
+  
+  if(n.r.step == 0 & distance.togo == 0 & sum(idx) == (c-1)){
+    print("Done")
+    break
+  }
+}
+
+### building strings
+all.segments <- purrr::map(.x = seq_along(idx), .f= ~{ # iterating over all the indices of idx
+  if(.x < length(idx)){   # if any index except the last one
+    string.segment <- c(rep("R", idx[.x]), "D") # add as many rightward operations as the number at that index, and one downward operation
+    return(string.segment)
+  } else { # for the last index
+    string.segment <- c(rep("R", idx[.x])) # just add the rightward operations; no downward operations, since it is the last row
+    return(string.segment)
+  }
+})
+
+all.segments <- purrr::map(.x = all.segments, .f = ~paste0(.x, collapse = ""))  # collapse vector into single string for each element in all.segments
+
+final_string <- do.call(what = str_c, args = all.segments) # concatentate all the string segments together
+
 ```
+
+`str_length` gets the length of a string.
+
+```{r}
+str_length(final_string)
+```
+
+
+```{r echo = TRUE}
+
+line <- paste(orig.distance, final_string, sep = " ")
+
+## writing the blank line between the answers to Q1a and Q1b
+
+write_lines(x = "", path = "./Question 1/output_question_1.txt", sep = "\n", append = TRUE)
+
+write_lines(x = line, path = "./Question 1/output_question_1.txt", sep = "\n", append = TRUE)
+
+```
+
+
+```{r echo=FALSE, results="hide"}
+idx[idx > 0]
+which(idx > 0)
+```
+
+
 
