Added flowchart to git

--- a/question_5.Rmd
+++ b/question_5.Rmd
@@ -3,8 +3,7 @@ title: "Code for Question 5"
 output: 
   html_notebook:
     number_sections: true
-    toc: 2
-    toc_float: true
+    toc: true
 ---
 
 
