--- a/question_6.Rmd
+++ b/question_6.Rmd
@@ -15,20 +15,22 @@ getwd()
 
 
 
-# Overall approach
+# Overall approach {#overall-approach}
 
 The general approach taken for determining whether a point lies within a polygon or not involves the following steps:
 
 1. Draw two lines emanating from the point of interest, one horizontal (parallel to the X-axis) and one vertical (parallel to the Y-axis).
 2. Find the points of intersection of these emanated lines with the line segments of the polygon.
 3. Check for the following two conditions:
-   1. At least one intersection point lies above the point of interest AND at least one lies  below.
-   2. At least one intersection point lies to the left of the point of interest AND at least one lies to the right.
-4. If **both** the conditions are true, then the point is deemed to be within the polygon, if not, the point is deemed to be outside the polygon.
+   1. At least one intersection point lies above (or at same level with) the point of interest AND at least one lies below (or at same level).
+   2. At least one intersection point lies to the left (or at same level with) of the point of interest AND at least one lies to the right (or at same level).
+4. If **both** the conditions are true, then the point is deemed to be within the polygon, one or both are false, the point is deemed to be outside the polygon.
 
 For example, consider the following plot of a point that lies within the polygon. The polygon given in the question has been plotted in green. A point of interest has been plotted as a blue square. The emanating horizontal and vertical lines have been plotted in blue. The points of intersection of the horizontal line have been plotted in purple, while those of the vertical line have been plotted in orange.
 
 The plot visually confirms that the point is indeed within the polygon. It can also be seen that the point of interest fulfills both the conditions in point 3 above; hence, these conditions can be used to verify whether a point lies within the polygon in the absence of visualisation.
+
+**Note:** the following plot code chunks have been run out of order, in that the code chunks coming after them have been run before them, creating variables that these plotting chunks use. This was possible since R notebooks can be run out of order. However, these chunks will cause an error if compiled in order using `knitr`. 
 
 ```{r, fig.height=5, fig.width=5, echo=FALSE}
 plot(5, 5, col = "white", xlab = "X", ylab = "Y", xlim = c(0, 25), ylim = c(0, 25)) 
@@ -65,7 +67,7 @@ walk(.x = seq_along(v.int.point.df), .f= ~{
   points(v.int.point["x"], v.int.point["y"], pch = 23, bg = "orange", cex = 2)
 })
 
-# ex.point <- c("x" = 11, "y" = 6)
+ex.point <- c("x" = 11, "y" = 8)
 # ex.line <- all.lines[[9]]
 
 # abline(a = ex.line[["icp"]], b = ex.line[["sl"]], col = "red")
@@ -202,7 +204,8 @@ Hence, these conditions can filter out any point lies outside the polygon in the
 ## Library imports
 
 ```{r echo = TRUE, results='hide'}
-library(tidyverse)
+library(readr)
+library(purrr)
 ```
 
 ## Reading in the files
@@ -234,18 +237,19 @@ colnames(poly.points) <- c("x", "y")
 poly.points
 ```
 
-
+Getting the points for which the status is to be found.
 
 ```{r}
 points.of.interest <- read_delim(file = file.path(curDir, "Question 6", "input_question_6_points"), delim = " ", col_names = F, col_types = "ii")
 points.of.interest
 ```
+Changing to better column names.
 
 ```{r}
 colnames(points.of.interest) <- c("x", "y")
 points.of.interest
 ```
-
+Getting the maximum x and y bounds of the polygon.
 
 ```{r}
 x.bounds.min <- min(poly.points$x)
@@ -267,33 +271,59 @@ print(y.bounds.max)
 
 ## Defining the functions
 
+### Getting line information
+
+The following function gets the "equation" of the lines forming the polygon from the point coordinates.
+
+It obtains the slope of the line, as well as its intercept (x intercept if the line is purely vertical with equation $x = a$, y intercept otherwise). It then stores the following information regarding the line in a list:
+
+1. Slope
+2. Intercept
+3. Coordinates of point 1
+4. Coordinates of point 2
+5. X coordinates of both points
+6. Y coordinates of both points
+7. Line type (normal, horizontal or vertical)
+
 ```{r}
 
 get.line <- function(a, b){
-  if(a[1] - b[1] == 0){
+  if(a[1] - b[1] == 0){       # if x2-x1 = 0, line is a vertical line with infinite slope
     slope <- Inf
     ltype <- "vertical"
     x.intercept <- a[1]
     l.list <- list("sl" = slope, "x.icp" = x.intercept, "pt1" = a, "pt2" = b, "x_coords" = c(a[1], b[1]), "y_coords" = c(a[2], b[2]), "ltype" = ltype)
      return(l.list)
-  }else if(a[2] - b[2] == 0){
+  }else if(a[2] - b[2] == 0){ # if y2-y1 = 0, line is a horizontal line with 0 slope
     slope <- 0
     ltype <- "horizontal"
     y.intercept <- a[2]
     l.list <- list("sl" = slope, "y.icp" = y.intercept, "pt1" = a, "pt2" = b, "x_coords" = c(a[1], b[1]), "y_coords" = c(a[2], b[2]), "ltype" = ltype)
     return(l.list)
-  }else{
+  }else{                  # or else, line is a normal line
     slope <- (a[2] - b[2])/(a[1] - b[1])
     ltype <- "normal"
-    intercept <- a[2] - slope*a[1]
+    intercept <- a[2] - slope*a[1]   # y intercept
     l.list <- list("sl" = slope, "icp" = intercept, "pt1" = a, "pt2" = b, "x_coords" = c(a[1], b[1]), "y_coords" = c(a[2], b[2]), ltype = ltype)
     return(l.list) 
   }
 }
-
-get.line(a, b)
 ```
 
+
+```{r}
+# getting the first two points of the polygon to draw a line between them
+a <- poly.points[1, ] %>% unlist(use.names = TRUE)
+b <- poly.points[2, ] %>% unlist(use.names = TRUE)
+```
+
+
+```{r}
+get.line(a, b)
+```
+### Getting all the lines of the polygon
+
+The function `map` iterates over the integer vector containing the row indices of `poly.points`, gets the x and y coordinates of the consecutive points stored in consecutive row of `poly` points, and applies `get.line` to each of those points to get the line equations of all the lines in the polygon. 
 
 ```{r}
 all.lines <- map(.x = 1:nrow(poly.points), .f = ~{
@@ -309,13 +339,30 @@ all.lines <- map(.x = 1:nrow(poly.points), .f = ~{
 })
 ```
 
+The variable `all.lines` contains information about all the lines in the polygon. Here is a look at the second line.
+
+```{r}
+all.lines[[2]]
+```
+
+Renaming the elements in `all.lines` with more informative names.
 
 ```{r}
 names(all.lines) <- paste("line", 1:nrow(poly.points), sep = "_")
 names(all.lines)
 ```
 
+## Getting horizontal and vertical intersects
 
+As discussed [above](#overall-approach), the strategy involves drawing a horizontal and a vertical line from the point of interest. For a point with coordinates $(a,b)$, the equation of the horizontal line will be $x = a$ and that of the vertical line will be $y = b$.
+
+The horizontal intersects are the intersection points of the horizontal line with all the lines in the polygon, and the vertical intersects are the intersection points of the vertical line with the polygon.
+
+To get the coordinates of the intersection point of the one of the lines of the polygon with the vertical line $x = a$, we would have to substitute $x = a$ in the equation of that line of the polygon.
+
+Similarly, the coordinates of the intersection point of the one of the lines of the polygon with the horizontal line $y = b$, we would have to substitute $y = b$ in the equation of that line of the polygon.
+
+The following two functions, `get.intersect.v` and `get.intersect.h`, get the intersection points of a polygon line with the vertical and horizontal lines respectively. They also ensure that such an intersection is even possible. For example if the polygon line also happens to be of the form $y = c$, then it will not have an intersection point with the horizontal line. In that case, `get.intersect.h` returns `NULL`. `get.intersect.v` does the same for vertical polygon lines.
 
 ```{r}
 get.intersect.v <- function(pt, l){
@@ -355,16 +402,19 @@ get.intersect.h <- function(pt, l){
 ```
 
 
+Testing the function on an example point and an example polygon line ("line 8").
+
 
 ```{r}
 ex.point <- c("x" = 11, "y" = 6)
-ex.line <- all.lines[[8]]
+ex.line <- all.lines[["line_8"]]
 ```
 
 ```{r}
 ex.line
 ```
 
+The following are the intersection points with the horizontal and vertical lines respectively:
 
 ```{r}
 int.point.h <- get.intersect.h(ex.point, ex.line)
@@ -374,6 +424,7 @@ int.point.v <- get.intersect.v(ex.point, ex.line)
 int.point.v
 ```
 
+However, just getting the intersection points is not enough. The intersection points must lie within the line segments defining the polygon. The following conditions check whether the x and y coordinates of the intersection points lie within the bounds of the polygon line segment for "line 8", which are defined by the x and y coordinates of the two points forming the line segment of "line 8".
 
 ```{r}
 any(int.point.h["x"] >= ex.line[["x_coords"]]) & any(int.point.h["x"] <= ex.line[["x_coords"]])
@@ -385,26 +436,59 @@ any(int.point.v["x"] >= ex.line[["x_coords"]]) & any(int.point.v["x"] <= ex.line
 any(int.point.v["y"] >= ex.line[["y_coords"]]) & any(int.point.v["y"] <= ex.line[["y_coords"]])
 ```
 
+The conditions show that while the intersection point of the horizontal line lies within the polygon line segment of "line 8", the intersection point of the vertical line lies beyond it.
+
+This can be visualised as follows:
+
+```{r fig.height=5, fig.width=5, echo=FALSE}
+plot(5, 5, col = "white", xlab = "X", ylab = "Y", xlim = c(0, 25), ylim = c(0, 25)) 
+# Draw a polygon 
+polygon(x = poly.points$x,  # X-Coordinates of polygon  
+        y = poly.points$y,    # Y-Coordinates of polygon 
+        col = "darkgreen")
+
+
+ex.point <- c("x" = 11, "y" = 6)
+ex.line <- all.lines[["line_8"]]
+
+abline(a = ex.line[["icp"]], b = ex.line[["sl"]], col = "red")
+
+points(ex.point["x"], ex.point["y"], pch = 22, bg = "blue", cex = 2)
+
+abline(v = ex.point["x"], col = "blue")
+abline(h = ex.point["y"], col = "blue")
+
+points(get.intersect.h(ex.point, ex.line)["x"], get.intersect.h(ex.point, ex.line)["y"], pch = 23, bg = "orange")
+# 
+points(get.intersect.v(ex.point, ex.line)["x"], get.intersect.v(ex.point, ex.line)["y"], pch = 23, bg = "purple")
+
+# segments(x0 = poly.points$x[1], y0 = poly.points$y[1], x1 = poly.points$x[2], y1 = poly.points$y[2], col = "orange", lwd = 4)
+```
+
+As can be seen, "line 8" has been visualised in red, and the horizontal and vertical lines are in blue. The vertical line does not intersect with "line 8" within the bounds of the line segment, but  intersects it further down at y =  -35.5.
+
+
+The following chunk of code tries to perform the the aoove process for all lines in the polygon, given a point $(x = 11, y = 6)$. It also tries to remove any intersection points that do not not lie within the line segments of the polygon.
 
 
 ```{r}
-ex.point <- c("x" = 11, "y" = 5)
+ex.point <- c("x" = 11, "y" = 6)
 
-v.int.point.list <- map(.x = all.lines, .f = function(ln){
+v.int.point.list <- map(.x = all.lines, .f = function(ln){ # map iterates over all the lines in the polygon
   
-  int.point <- get.intersect.v(ex.point, ln)
+  int.point <- get.intersect.v(ex.point, ln) # find the vertical intersection points for a given line
   
-  x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]])
+  x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]]) # do x coordinates of intersection points lie within line segment
   
-  y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]])
+  y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]]) # do y coordinates of intersection points lie within line segment
   
-  if(x.status & y.status){
-    return(int.point)
+  if(x.status & y.status){ # only if both the conditions are true
+    return(int.point)  # return  the intersection point coordinates (the function will return NULL if the condition is not true)
   }
 })
 
-h.int.point.list <- map(.x = all.lines, .f = function(ln){
-  int.point <- get.intersect.h(ex.point, ln)
+h.int.point.list <- map(.x = all.lines, .f = function(ln){ 
+  int.point <- get.intersect.h(ex.point, ln) # find the horizontal intersection points for a given line
   
   x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]])
   y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]])
@@ -412,15 +496,15 @@ h.int.point.list <- map(.x = all.lines, .f = function(ln){
   # return(int.point)
   
   if(x.status & y.status){
-    # return(int.point)
-    return(NULL)
+    return(int.point)
   }
 })
 ```
 
+As can be seen, several of the elements are `NULL`, indicating that those lines do not intersect with the horizontal line within the segments of the polygon.
 
 ```{r}
-ex.point
+h.int.point.list
 ```
 
 
@@ -428,11 +512,11 @@ ex.point
 v.int.point.list
 ```
 
-
+The following code removes `NULL` elements and converts `h.int.point.list` and `v.int.point.list` into collapsed data frames for easier manipulation.
 
 ```{r}
-h.int.point.list <- h.int.point.list[!map_lgl(h.int.point.list, is.null)]
-h.int.point.df <- map_dfr(h.int.point.list, .f = ~{return(.x)},.id = "line_number")
+h.int.point.list <- h.int.point.list[!map_lgl(h.int.point.list, is.null)] # remove null elements
+h.int.point.df <- map_dfr(h.int.point.list, .f = ~{return(.x)},.id = "line_number") # map_dfr binds a list of equal-sized vectors into a data frame as rows
 h.int.point.df
 ```
 
@@ -443,17 +527,21 @@ v.int.point.df <- map_dfr(v.int.point.list, .f = ~{return(.x)},.id = "line_numbe
 v.int.point.df
 ```
 
+## Checking whether original point is bounded by intersection points
+
+As discussed [above](#overall-approach), the original point of interest must lie within the bounds of the intersection points to be considered as lying within the polygon. The following code checks this condition. The original point must lie within the y co-ordinates of the points of intersection with the vertical line, and must lie within the x co-ordinates of the points of intersection with the horizontal line. Both `h.status` and `v.status` must be true for the point to lie within the polygon.
 
 ```{r}
-if(nrow(v.int.point.df) == 0){
-  v.status <- FALSE
+if(nrow(v.int.point.df) == 0){ # if the data frame has 0 rows (all elements of the v.int.point.list were NULL, this might turn out to be the case)
+  v.status <- FALSE # return FALSE
 }else{
 v.status <- any(ex.point["y"] <= v.int.point.df$y) & any(ex.point["y"] >= v.int.point.df$y)
 }
+ 
 
 print(paste("v status", v.status))
 
-if(nrow(h.int.point.df) == 0){
+if(nrow(h.int.point.df) == 0){ # if the data frame has 0 rows (all elements of the h.int.point.list were NULL, this might turn out to be the case)
   h.status <- FALSE
 }else{
   h.status <- any(ex.point["x"] <= h.int.point.df$x) & any(ex.point["x"] >= h.int.point.df$x)
@@ -462,57 +550,11 @@ if(nrow(h.int.point.df) == 0){
 print(paste("h status", h.status))
 ```
 
-## Collated code
-
-```{r}
-
-ex.point <- c("x" = 2, "y" = 12)
-
-v.int.point.list <- map(.x = all.lines, .f = function(ln){
-  int.point <- get.intersect.v(ex.point, ln)
-  
-  x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]])
-  
-  y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]])
-  
-  if(x.status & y.status){
-    return(int.point)
-  }
-})
-
-
-h.int.point.list <- map(.x = all.lines, .f = function(ln){
-  int.point <- get.intersect.h(ex.point, ln)
-
-  x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]])
-
-  y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]])
-  
-  if(x.status & y.status){
-    return(int.point)
-  }
-})
-
-h.int.point.list <- h.int.point.list[!map_lgl(h.int.point.list, is.null)]
-
-h.int.point.df <- map_dfr(h.int.point.list, .f = ~{return(.x)},.id = "line_number")
-
-v.int.point.list <- v.int.point.list[!map_lgl(v.int.point.list, is.null)]
-
-v.int.point.df <- map_dfr(v.int.point.list, .f = ~{return(.x)},.id = "line_number")
-
-v.status <- any(ex.point["y"] <= v.int.point.df$y) & any(ex.point["y"] >= v.int.point.df$y)
-
-h.status <- any(ex.point["x"] <= h.int.point.df$x) & any(ex.point["x"] >= h.int.point.df$x)
-
-
-h.status
-v.status
-
-```
-
+As can be seen, the point $(11, 6)$ does not lie within the polygon, because its y coordinates do not lie within the bounds defined by the intersection points with the vertical line.
 
 ## Collective function
+
+The following function, `find.status`, puts all the above code together. Given a point and the lines of the polygon (derived from the given points of the polygon), it returns the "status" of the point as being within or outside the polygon.
 
 ```{r}
 
@@ -564,60 +606,20 @@ if(h.status & v.status){
 ```
 
 
+Let us check the output of the function for $(11, 6)$
+
 ```{r check-function}
-ex.point <- c("x" = 5, "y" = 21)
+ex.point <- c("x" = 11, "y" =  6)
 
 find.status(poi = ex.point, poly.lines = all.lines)
 ```
 
 
-```{r collated code}
+This can be visually confirmed:
 
-v.int.point.list <- map(.x = all.lines, .f = function(ln){
-  int.point <- get.intersect.v(ex.point, ln)
-  
-  x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]])
-  
-  y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]])
-  
-  if(x.status & y.status){
-    return(int.point)
-  }
-})
-
-
-h.int.point.list <- map(.x = all.lines, .f = function(ln){
-  int.point <- get.intersect.h(ex.point, ln)
-
-  x.status <- any(int.point["x"] >= ln[["x_coords"]]) & any(int.point["x"] <= ln[["x_coords"]])
-
-  y.status <- any(int.point["y"] >= ln[["y_coords"]]) & any(int.point["y"] <= ln[["y_coords"]])
-  
-  if(x.status & y.status){
-    return(int.point)
-  }
-})
-
-h.int.point.list <- h.int.point.list[!map_lgl(h.int.point.list, is.null)]
-
-h.int.point.df <- map_dfr(h.int.point.list, .f = ~{return(.x)},.id = "line_number")
-
-v.int.point.list <- v.int.point.list[!map_lgl(v.int.point.list, is.null)]
-
-v.int.point.df <- map_dfr(v.int.point.list, .f = ~{return(.x)},.id = "line_number")
-
-v.status <- any(ex.point["y"] <= v.int.point.df$y) & any(ex.point["y"] >= v.int.point.df$y)
-
-h.status <- any(ex.point["x"] <= h.int.point.df$x) & any(ex.point["x"] >= h.int.point.df$x)
-
-
-h.status
-v.status
-```
-
-
-```{r, fig.height=5, fig.width=5, echo=FALSE}
+```{r fig.height=5, fig.width=5, echo=FALSE}
 plot(5, 5, col = "white", xlab = "X", ylab = "Y", xlim = c(0, 25), ylim = c(0, 25)) 
+
 # Draw a polygon 
 polygon(x = poly.points$x,  # X-Coordinates of polygon  
         y = poly.points$y,    # Y-Coordinates of polygon 
@@ -633,18 +635,17 @@ walk(.x = seq_along(v.int.point.df), .f= ~{
   points(v.int.point["x"], v.int.point["y"], pch = 23, bg = "orange", cex = 2)
 })
 
-# ex.point <- c("x" = 11, "y" = 6)
-# ex.line <- all.lines[[9]]
-
-# abline(a = ex.line[["icp"]], b = ex.line[["sl"]], col = "red")
-
 points(ex.point["x"], ex.point["y"], pch = 22, bg = "blue", cex = 2)
 
 abline(v = ex.point["x"], col = "blue")
 abline(h = ex.point["y"], col = "blue")
+
+# segments(x0 = poly.points$x[1], y0 = poly.points$y[1], x1 = poly.points$x[2], y1 = poly.points$y[2], col = "orange", lwd = 4)
 ```
 
+# Getting the status for all the points
 
+The following code chunk applies `find.status` to all the points of interest and gets their status.
 
 ```{r apply-function}
 status <- map_dfr(.x = 1:nrow(points.of.interest), .f = ~{
